k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "goserver"
  labels:
    name: "goserver"
spec:
  containers:
  - name: "goserver"
    image: juliovcruz0/hello-go:latest
