k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: "goserver"
  type: LoadBalancer
  ports:
  - name: goserver-service
    port: 7000
    targetPort: 8080
    protocol: TCP
